--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">RSOSwipe</string>
+    <string name="username_prompt">Name</string>
+    <string name="password_prompt">Password</string>>
+    <string name="login_button">Login</string>
+    <string name="registration_prompt">Need An Account?</string>
+    <string name="registration_button">Tap here!</string>
 </resources>
